--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <div class="container">
     <div class="row navigation">
-      <dicv class="span2 logo">
+      <div class="span2 logo">
 	Logo
 	</div>
     <div class="span6 blank">
