--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       }
 
       .container {
-      width: 960 px;
+      width: 960px;
       }
 
       p.lead {
@@ -66,7 +66,7 @@
     </div>
   <div class="row subheading">
     <div class="span12">
-      <p class="lead"> This is my first bitsrtarter project. </p>
+      <p class="lead"> This is my first bitstarter project. </p>
       </div>
     </div>
 
