--- a/index.html
+++ b/index.html
@@ -207,7 +207,10 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+<a class="coinbase-button" data-code="f802f524d1a63d4703d2872e90752c0b" 
+   data-button-style="custom_large"
+   data-button-text="Fund us with Bitcoin"
+   href="https://coinbase.com/checkouts/f802f524d1a63d4703d2872e90752c0b">Fund us With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           </div>
           </div>
           <div class="row-fluid">
